# fitsutils_lin

./: CMakeLists.txt
docopt/: CMakeLists.txt
src/: CMakeLists.txt  th2_to_fits.cc
